# qt8_dop

./: CMakeLists.txt  CMakeLists.txt.user.f542154  README.md  filesearcher.cpp  filesearcher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
